k8s/05-mongodb-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb
  namespace: bookInfo
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
        app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:     
      containers:
        - name: mongodb
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: mongodb-data
              mountPath: /var/lib/mongodb/data
            - name: mongodb-init
              mountPath: /docker-entrypoint-initdb.d              
          image: mongo
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb
        - name: mongodb-init
          configMap:
            name: mongo-init                      
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
