k8s/17-prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus      
        ports:
        - containerPort: 9090
        volumeMounts:
          - name: prom-scrapeconfig
            mountPath: /etc/prometheus/
      volumes:
        - name: prom-scrapeconfig
          configMap:
            name: prom-scrape
