k8s/06-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb
  namespace: bookInfo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongodb
