k8s/18-prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: bookInfo
spec:
  ports:
  - name: "http"
    port: 9090
    targetPort: 9090
  selector:
    app: prometheus
