k8s/09-mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meingress
  namespace: bookInfo
spec:
  rules:
  - host: me.bookInfo.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo-express
            port:
              number: 8081
