k8s/11-jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaegeringress
  namespace: bookInfo
spec:
  rules:
  - host: jaeger.bookInfo.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jaeger-query
            port:
              number: 16686
