k8s/21-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafanaingress
  namespace: bookInfo
spec:
  rules:
  - host: grf.bookInfo.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port:
              number: 3000
